feat: add separate meta and text creation
