# api_service/api_service/endpoints/summarizations/text.py
@@ -1,0 +1,15 @@
+from api_service.models import Summarization, SummarizationText
+
+
+def post(summarizationId, body):
+    summarization = Summarization.get(id=summarizationId)
+    text = body.get("text", "")
+
+    SummarizationText.create(
+        **{
+            "summarization": summarization,
+            "text": text,
+        }
+    )
+
+    return Summarization.get(id=summarizationId).asdict()
